# FaceRecognition1

./: .gitignore  CMakeLists.txt  CMakePresets.json  FaceRecognition.cpp  FaceRecognitionW2.cpp  READme.md  Trial.cpp
TCPserverandclient/: TCPclient.py  TCPserver.py
TTSpython/: StudentReceiver.py  TTS.py  UpdateDic.py  questions.jsgf  ro.dic
